--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf_2.8.0.v20180706-1146.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.emf.common_2.15.0.v20180914-1817.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore_2.16.0.v20181124-0637.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.ocl_3.10.100.v20181210-1441.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore_2.13.0.v20170609-0707.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore.xmi_2.15.0.v20180706-1146.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.ocl.ecore_3.10.100.v20181210-1441.jar"/>
+	<classpathentry kind="lib" path="lib/lpg.runtime.java_2.0.17.v201004271640.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.common_2.15.0.v20180914-1817.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.ocl.common_1.8.100.v20181210-1441.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
